--- a/templates/AnimaBlend/index.html
+++ b/templates/AnimaBlend/index.html
@@ -23,11 +23,11 @@
             <span class="dic">Dic</span><span class="tators">tators</span>
         </div>
         <ul class="nav-links">
-          <li><a href="/">AnimaChat</a></li>
+          <li><a href="/blog">AnimaBlog</a></li>
           <li><a href="/home">AnimaBlend</a></li>
           <li><a href="/" class="active-dic"><img src="{% static "AnimaBlend/assets/index-images/zoro-logo.png" %}" class="debian"></a></li>
           <li><a href="/">Community</a></li>
-          <li><a href="/">About</a></li>
+          <li><a href="/">Acount</a></li>
         </ul>
       </nav>
       <div class="search">
@@ -77,13 +77,13 @@
             <div class="anima-chat-text1">
               Join The <br />
               Global <br />
-              Chat <br />
-              <span class="dic2">Anima</span><span class="tators">Chat</span>
+              Blog <br />
+              <span class="dic2">Anima</span><span class="tators">Blog</span>
             </div>
           </div>
         </div>
         <div class="home-button">
-          <a href=""><button class="button-1" role="button">Join Chat</button></a>
+          <a href=""><button class="button-1" role="button">Join Blog</button></a>
         </div>
       </div>
 
