--- a/templates/AnimaBlend/search.html
+++ b/templates/AnimaBlend/search.html
@@ -22,11 +22,11 @@
             <span class="dic">Dic</span><span class="tators">tators</span>
         </div>
         <ul class="nav-links">
-          <li><a href="/">AnimaChat</a></li>
+          <li><a href="/blog">AnimaBlog</a></li>
           <li><a href="/home">AnimaBlend</a></li>
           <li><a href="/"><img src="{% static "AnimaBlend/assets/index-images/zoro-logo.png" %}" class="debian"></a></li>
           <li><a href="/">Community</a></li>
-          <li><a href="/">About</a></li>
+          <li><a href="/">Acount</a></li>
         </ul>
       </nav>
       <div class="search">
