--- a/templates/AnimaBlend/details.html
+++ b/templates/AnimaBlend/details.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Details</title>
+    <title>{{ anime.title }}</title>
     <link rel="stylesheet" href="{% static 'AnimaBlend/css/indexcss.css' %}" />
     {% comment %} <link rel="stylesheet" href="{% static 'AnimaBlend/css/search.css' %}" /> {% endcomment %}
     <link rel="stylesheet" href="{% static 'AnimaBlend/css/details.css' %}" />
@@ -24,7 +24,7 @@
             <span class="dic">Dic</span><span class="tators">tators</span>
           </div>
           <ul class="nav-links">
-            <li><a href="/">AnimaChat</a></li>
+            <li><a href="blog">AnimaBlog</a></li>
             <li><a href="/home">AnimaBlend</a></li>
             <li>
               <a href="/"
@@ -33,7 +33,7 @@
               >
             </li>
             <li><a href="/">Community</a></li>
-            <li><a href="/">About</a></li>
+            <li><a href="/">Acount</a></li>
           </ul>
         </nav>
         <div class="search">
