--- a/templates/AnimaBlend/home.html
+++ b/templates/AnimaBlend/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>AnimaBlend</title>
   <link rel="stylesheet" href="{% static "AnimaBlend/css/indexcss.css" %}">
   <link rel="stylesheet" href="{% static "AnimaBlend/css/home.css" %}">
   <link rel="stylesheet" href="{% static "AnimaBlend/css/play.css" %}">
@@ -23,7 +23,7 @@
         <span class="dic">Dic</span><span class="tators">tators</span>
       </div>
       <ul class="nav-links">
-        <li><a href="/">AnimaChat</a></li>
+        <li><a href="blog">AnimaBlog</a></li>
         <li><a href="/home" class="active">AnimaBlend</a></li>
         <li>
           <a href="/"
@@ -32,7 +32,7 @@
           >
         </li>
         <li><a href="/">Community</a></li>
-        <li><a href="/">About</a></li>
+        <li><a href="/">Acount</a></li>
       </ul>
     </nav>
     <div class="search">
@@ -59,7 +59,7 @@
       <div class="carousel-slide" style="background-image: url('{{ i.wallpaper }}');">
         <div class="carousel-slide-cover">
           <div class="carousel-content">
-            <h1>{{ i.title }}</h1>
+            <h1 class="home-carousel-head">{{ i.title }}</h1>
             <div class="meta-info">
               <span>📺 TV</span>
               <span>Episodes: {{ i.episode.count }}</span>
@@ -81,15 +81,16 @@
     {% comment %} monthly_trending_html_starts_here {% endcomment %}
 
       <div class="trending-card-slider-section">
-        <div class="trending-heading">Monthly Trending</div>
+        <div class="trending-heading">Top 10 Monthly Trending</div>
         <div class="home-card-slider-wrapper first-slider">
           <button class="home-card-prev">&#10094;</button>
           <div class="home-card-slider-container">
             <div class="home-card-slider">
               <!-- Card 1 -->
             {% for anime in monthly %}
-            <a href="{% url "details" anime.id %}">
-            <div class="home-card">
+            <div class="home-card-wrapper">
+              <a href="{% url "details" anime.id %}">
+                <div class="home-card">
               <div class="home-card-image">
                 <img src="{{ anime.thumbnail }}" alt="Show Image">
               </div>
@@ -101,6 +102,7 @@
               <div class="home-card-episodes">Episodes: {{ anime.episode.count }}</div>
             </div>
             </a>
+            </div>
             {% endfor %}
               <!-- Repeat the card structure for more items -->
             </div>
@@ -112,26 +114,28 @@
     {% comment %} All_time_best_anime_css_starts_here {% endcomment %}
 
     <div class="trending-card-slider-section">
-      <div class="trending-heading">Top Rated</div>
+      <div class="trending-heading">Top 10 All Time Best</div>
       <div class="home-card-slider-wrapper first-slider">
         <button class="home-card-prev">&#10094;</button>
         <div class="home-card-slider-container">
           <div class="home-card-slider">
             <!-- Card 1 -->
           {% for anime in all_time %}
-          <a href="{% url "details" anime.id %}">
-          <div class="home-card">
-            <div class="home-card-image">
-              <img src="{{ anime.thumbnail }}" alt="Show Image">
-            </div>
-            {% if anime.title|length > 15 %}
-            <div class="home-card-title">{{ anime.title|slice:":15" }}...</div>
-            {% else %}
-            <div class="home-card-title">{{ anime.title }}</div>
-            {% endif %}
-            <div class="home-card-episodes">Episodes: {{ anime.episode.count }}</div>
+          <div class="home-card-wrapper">
+            <a href="{% url "details" anime.id %}">
+              <div class="home-card">
+                <div class="home-card-image">
+                  <img src="{{ anime.thumbnail }}" alt="Show Image">
+                </div>
+                {% if anime.title|length > 15 %}
+                <div class="home-card-title">{{ anime.title|slice:":15" }}...</div>
+                {% else %}
+                <div class="home-card-title">{{ anime.title }}</div>
+                {% endif %}
+                <div class="home-card-episodes">Episodes: {{ anime.episode.count }}</div>
+              </div>
+            </a>
           </div>
-          </a>
           {% endfor %}
             <!-- Repeat the card structure for more items -->
           </div>
@@ -144,26 +148,28 @@
   {% comment %} random_anime_html_starts_here {% endcomment %}
 
   <div class="trending-card-slider-section">
-    <div class="trending-heading">Random Anime</div>
+    <div class="trending-heading">10 Random Anime</div>
     <div class="home-card-slider-wrapper first-slider">
       <button class="home-card-prev">&#10094;</button>
       <div class="home-card-slider-container">
         <div class="home-card-slider">
           <!-- Card 1 -->
         {% for anime in random_anime %}
-        <a href="{% url "details" anime.id %}">
-        <div class="home-card">
-          <div class="home-card-image">
-            <img src="{{ anime.thumbnail }}" alt="Show Image">
-          </div>
-          {% if anime.title|length > 15 %}
-          <div class="home-card-title">{{ anime.title|slice:":15" }}...</div>
-          {% else %}
-          <div class="home-card-title">{{ anime.title }}</div>
-          {% endif %}
-          <div class="home-card-episodes">Episodes: {{ anime.episode.count }}</div>
+        <div class="home-card-wrapper">
+          <a href="{% url "details" anime.id %}">
+            <div class="home-card">
+              <div class="home-card-image">
+                <img src="{{ anime.thumbnail }}" alt="Show Image">
+              </div>
+              {% if anime.title|length > 15 %}
+              <div class="home-card-title">{{ anime.title|slice:":15" }}...</div>
+              {% else %}
+              <div class="home-card-title">{{ anime.title }}</div>
+              {% endif %}
+              <div class="home-card-episodes">Episodes: {{ anime.episode.count }}</div>
+            </div>
+          </a>
         </div>
-        </a>
         {% endfor %}
           <!-- Repeat the card structure for more items -->
         </div>
