--- a/templates/AnimaBlend/Blog.html
+++ b/templates/AnimaBlend/Blog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
     <link rel="stylesheet" href="{% static "AnimaBlend/css/indexcss.css" %}">
+    <link rel="stylesheet" href="{% static "AnimaBlend/css/login.css" %}">
   </head>
   <body>
     {% comment %} nav_bar_css_starts_here {% endcomment %}
@@ -29,7 +30,7 @@
           >
         </li>
         <li><a href="/">Community</a></li>
-        <li><a href="/">Acount</a></li>
+        <li><span class="account">Account</span></li>
       </ul>
     </nav>
     <div class="search">
@@ -45,13 +46,73 @@
     </div>
   </div>
 
-  {% comment %} nav_bar_css_end_here {% endcomment %}
+  {% comment %} nav_bar_html_end_here {% endcomment %}
 
   {% comment %} login div html starts here {% endcomment %}
 
-  
+  <div class="login-container">
+    <div class="login-main">
+      <span class="login-close"><img src="{% static "AnimaBlend/assets/icons/close.png" %}" alt="cross"></span>
+      <div class="login-content login">
+        <h2>LOGIN</h2>
+        <form action="#">
+          <div class="input-box">
+            <span class="icon"><img src="{% static "AnimaBlend/assets/icons/mail.svg" %}" alt=""></span>
+            <input type="email" required>
+            <label>Email</label>
+          </div>
+          <div class="input-box">
+            <span class="icon"><img src="{% static "AnimaBlend/assets/icons/pass.png" %}" alt=""></span>
+            <input type="password" required>
+            <label>Password</label>
+          </div>
+          <div class="remember-forgot">
+            <label> <input type="checkbox">Remember me</label>
+            <a href="#">Forgot Password</a>
+          </div>
+          <button type="submit" class="login-btn">Login</button>
+          <div class="login-register">
+            <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
+          </div>
+        </form>
+      </div>
+
+
+      {% comment %} registration part -------------------- {% endcomment %}
+
+      <div class="login-content register">
+        <h2>Registration</h2>
+        <form action="#">
+          <div class="input-box">
+            <span class="icon"><img src="{% static "AnimaBlend/assets/icons/user.png" %}" alt=""></span>
+            <input type="text" required>
+            <label>Username</label>
+          </div>
+          <div class="input-box">
+            <span class="icon"><img src="{% static "AnimaBlend/assets/icons/mail.svg" %}" alt=""></span>
+            <input type="email" required>
+            <label>Email</label>
+          </div>
+          <div class="input-box">
+            <span class="icon"><img src="{% static "AnimaBlend/assets/icons/pass.png" %}" alt=""></span>
+            <input type="password" required>
+            <label>Password</label>
+          </div>
+          <div class="remember-forgot">
+            <label> <input type="checkbox">I agree to the terms and conditions</label>
+          </div>
+          <button type="submit" class="login-btn">Register</button>
+          <div class="login-register">
+            <p>Already have an account? <a href="#" class="login-link">Login</a></p>
+          </div>
+        </form>
+      </div>
+
+
+    </div>
+  </div>
 
   {% comment %} login div html ends here {% endcomment %}
-
+  <script src="{% static "AnimaBlend/js/login.js" %}"></script>
   </body>
 </html>
