--- a/templates/AnimaBlend/search.html
+++ b/templates/AnimaBlend/search.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="{% static "AnimaBlend/css/indexcss.css" %}" />
     <link rel="stylesheet" href="{% static "AnimaBlend/css/search.css" %}" />
+    <link rel="stylesheet" href="{% static "AnimaBlend/css/login.css" %}" />
   </head>
   <body>
     {% comment %} nav_bar_starts_here {% endcomment %}
@@ -26,7 +27,7 @@
           <li><a href="/home">AnimaBlend</a></li>
           <li><a href="/"><img src="{% static "AnimaBlend/assets/index-images/zoro-logo.png" %}" class="debian"></a></li>
           <li><a href="/">Community</a></li>
-          <li><a href="/">Acount</a></li>
+          <li><span class="account">Acount</span></li>
         </ul>
       </nav>
       <div class="search">
@@ -149,5 +150,76 @@
 
     </div>
 
+{% comment %} ---------------------------------------------------------------------------------------------------------- {% endcomment %}
+
+{% comment %} here======================================================= {% endcomment %}
+{% comment %} login================ {% endcomment %}
+{% comment %} html+++++++++++++++++++++++++++++++++++++++++++++++ {% endcomment %}
+<div class="login-container">
+  <div class="login-main">
+    <span class="login-close"><img src="{% static "AnimaBlend/assets/icons/close.png" %}" alt="cross"></span>
+    <div class="login-content login">
+      <h2>LOGIN</h2>
+      <form action="#">
+        <div class="input-box">
+          <span class="icon"><img src="{% static "AnimaBlend/assets/icons/mail.svg" %}" alt=""></span>
+          <input type="email" required>
+          <label>Email</label>
+        </div>
+        <div class="input-box">
+          <span class="icon"><img src="{% static "AnimaBlend/assets/icons/pass.png" %}" alt=""></span>
+          <input type="password" required>
+          <label>Password</label>
+        </div>
+        <div class="remember-forgot">
+          <label> <input type="checkbox">Remember me</label>
+          <a href="#">Forgot Password</a>
+        </div>
+        <button type="submit" class="login-btn">Login</button>
+        <div class="login-register">
+          <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
+        </div>
+      </form>
+    </div>
+
+
+    {% comment %} registration part -------------------- {% endcomment %}
+
+    <div class="login-content register">
+      <h2>Registration</h2>
+      <form action="#">
+        <div class="input-box">
+          <span class="icon"><img src="{% static "AnimaBlend/assets/icons/user.png" %}" alt=""></span>
+          <input type="text" required>
+          <label>Username</label>
+        </div>
+        <div class="input-box">
+          <span class="icon"><img src="{% static "AnimaBlend/assets/icons/mail.svg" %}" alt=""></span>
+          <input type="email" required>
+          <label>Email</label>
+        </div>
+        <div class="input-box">
+          <span class="icon"><img src="{% static "AnimaBlend/assets/icons/pass.png" %}" alt=""></span>
+          <input type="password" required>
+          <label>Password</label>
+        </div>
+        <div class="remember-forgot">
+          <label> <input type="checkbox">I agree to the terms and conditions</label>
+        </div>
+        <button type="submit" class="login-btn">Register</button>
+        <div class="login-register">
+          <p>Already have an account? <a href="#" class="login-link">Login</a></p>
+        </div>
+      </form>
+    </div>
+
+
+  </div>
+</div>
+{% comment %} //////////////////////////////////////////////////////////// {% endcomment %}
+{% comment %} end login {% endcomment %}
+{% comment %} hehe -------------------________________________________========================== {% endcomment %}
+
+<script src="{% static "AnimaBlend/js/login.js" %}"></script>
   </body>
 </html>
