--- a/templates/AnimaBlend/index.html
+++ b/templates/AnimaBlend/index.html
@@ -27,7 +27,7 @@
           <li><a href="/blog">AnimaBlog</a></li>
           <li><a href="/home">AnimaBlend</a></li>
           <li><a href="/" class="active-dic"><img src="{% static "AnimaBlend/assets/index-images/zoro-logo.png" %}" class="debian"></a></li>
-          <li><a href="/">Community</a></li>
+          <li><a href="/latest">Latest</a></li>
           <li><span class="account">Account</span></li>
         </ul>
       </nav>
