--- a/templates/AnimaBlend/play.html
+++ b/templates/AnimaBlend/play.html
@@ -34,7 +34,7 @@
               class="debian"></a
             >
           </li>
-          <li><a href="/">Community</a></li>
+          <li><a href="/latest">Latest</a></li>
           <li><span class="account">Account</span></li>
         </ul>
       </nav>
