--- a/static/AnimaBlend/css/login.css
+++ b/static/AnimaBlend/css/login.css
@@ -6,7 +6,7 @@
 }
 
 .login-container{
-    position: absolute;
+    position: fixed;
     top: 0;
     background-color: rgba(51, 51, 51, 0.3);
     height: 100%;
