--- a/static/AnimaBlend/css/latest.css
+++ b/static/AnimaBlend/css/latest.css
@@ -20,7 +20,7 @@
 
 .latest-box{
     width: 100%;
-    height: 80dvh;
+    height: 80svh;
     /* background-color: rgba(51, 51, 51, .55); */
     border-radius: 8px;
     margin-bottom: 40px;
@@ -74,4 +74,21 @@
 }
 .latest-content-description::-webkit-scrollbar {
     display: none;
+}
+
+@media (max-width:800px) {
+    .latest-box{
+        height: 30svh;
+        margin-bottom: 60px;
+    }
+    .latest-content{
+        font-size: 20px;
+    }
+    .latest-content-episode{
+        margin-bottom: 5px;
+    }
+    .latest-content-description{
+        margin: 10px 0;
+        height: 40%;
+    }
 }
